--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@angular/router": "~8.2.11",
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "bootstrap": "^4.3.1",
+    "file-saver": "^2.0.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
+    "read-excel-file": "^4.0.4",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^9.3.6",
     "tslib": "^1.10.0",
+    "xlsx": "^0.15.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
